--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -6,6 +6,12 @@
 
 /* ================================================================== */
 
+@media only screen and (max-width: 1050px) {
+  [class*=" devicon-"], [class^=devicon-] {
+    font-size: 35px;
+    letter-spacing: 10px;
+  }
+}
 
 /* screenwidth less than 1024px
 --------------------------------------------------------------------- */
@@ -25,12 +31,17 @@
 --------------------------------------------------------------------- */
 @media only screen and (max-width: 900px) {
 
+  [class*=" devicon-"], [class^=devicon-] {
+    font-size: 30px;
+    letter-spacing: 5px;
+  }
+
     /* header styles
    ------------------------------------------------------------------ */
    header .banner { padding-bottom: 12px; }
    header .banner-text h1 {
       font: 78px/1.1em 'opensans-bold', sans-serif;
-      letter-spacing: -1px;      
+      letter-spacing: -1px;
    }
    header .banner-text h3 {
       font: 17px/1.9em 'librebaskerville-regular', serif;
@@ -60,7 +71,7 @@
    /* Resume Section
    ------------------------------------------------------------------- */
    #resume h1 { font: 16px/24px 'opensans-bold', sans-serif; }
-   #resume .main-col { padding-right: 5%; }   
+   #resume .main-col { padding-right: 5%; }
 
    /* Testimonials Section
    ------------------------------------------------------------------- */
@@ -70,7 +81,7 @@
    }
    #testimonials blockquote p {
       font-size: 22px;
-      line-height: 46px;      
+      line-height: 46px;
    }
 
     /* Call to Action Section
@@ -97,12 +108,17 @@
 
 @media only screen and (max-width: 767px) {
 
+  [class*=" devicon-"], [class^=devicon-] {
+    font-size: 25px;
+    letter-spacing: 3px;
+  }
+
    /* mobile navigation
    -------------------------------------------------------------------- */
    #nav-wrap {
       font: 12px 'opensans-bold', sans-serif;
       background: transparent !important;
-      letter-spacing: 1.5px;  
+      letter-spacing: 1.5px;
       width: auto;
       position: fixed;
       top: 0;
@@ -112,7 +128,7 @@
 	   width: 48px;
 		height: 48px;
 		text-align: left;
-		background-color: #CC5200;
+		background-color: #ed3837;
 		position: relative;
       border: none;
       float: right;
@@ -148,8 +164,8 @@
       height: auto;
 		display: none;
       clear: both;
-      width: auto; 
-      float: right;     
+      width: auto;
+      float: right;
 
       position: relative;
       top: 12px;
@@ -167,22 +183,22 @@
 
    ul#nav li {
       display: block;
-      height: auto;      
-      margin: 0 auto; 
-      padding: 0 4%;           
+      height: auto;
+      margin: 0 auto;
+      padding: 0 4%;
       text-align: left;
       border-bottom: 1px solid #2D2E34;
-      border-bottom-style: dotted; 
+      border-bottom-style: dotted;
    }
-  
-   ul#nav li a {  
-      display: block;    
+
+   ul#nav li a {
+      display: block;
       margin: 0;
-      padding: 0;      
-      margin: 12px 0; 
+      padding: 0;
+      margin: 12px 0;
       line-height: 16px; /* reset line-height from 48px */
       border: none;
-   }  
+   }
 
 
    /* Header Styles
@@ -205,7 +221,7 @@
    header .social {
       margin: 18px 0 24px 0;
       font-size: 24px;
-      line-height: 36px;      
+      line-height: 36px;
    }
    header .social li { margin: 0 10px; }
 
@@ -234,7 +250,7 @@
    #resume h1 { letter-spacing: 3px; }
    #resume .main-col { padding-right: 30px; }
    #resume h3, #resume .info { text-align: center; }
-      
+
    .bars { width: 100%; }
 
 
@@ -272,7 +288,7 @@
    #testimonials blockquote { padding-bottom: 24px; }
    #testimonials blockquote p {
       font-size: 20px;
-      line-height: 42px;      
+      line-height: 42px;
    }
 
    /* Control Nav */
@@ -287,11 +303,11 @@
    #contact { padding-bottom: 66px; }
    #contact .section-head { margin-bottom: 12px; }
    #contact .section-head h1 {
-      font: 16px/24px 'opensans-bold', sans-serif;            
-      text-align: center;   
+      font: 16px/24px 'opensans-bold', sans-serif;
+      text-align: center;
       margin-bottom: 30px;
       text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
-   }  
+   }
    #contact h1 span { display: block; }
    #contact .header-col { padding-top: 0; }
    #contact .header-col h1:before { content: none;	}
@@ -305,7 +321,7 @@
    #contact input,
    #contact textarea,
    #contact select {
-     	margin-bottom: 6px;    	
+     	margin-bottom: 6px;
       width: 100%;
    }
    #contact button.submit { margin: 30px 0 24px 0; }
@@ -317,7 +333,7 @@
 
    /* footer
    ------------------------------------------------------------------------ */
-  
+
    /* copyright */
    footer .copyright li:before { content: none; }
    footer .copyright li { margin-right: 12px; }
@@ -343,6 +359,11 @@
 
 @media only screen and (max-width: 480px) {
 
+    [class*=" devicon-"], [class^=devicon-] {
+      font-size: 20px;
+      letter-spacing: 2px;
+    }
+
    /* mobile navigation
    -------------------------------------------------------------------- */
    #nav-wrap ul#nav { width: auto; float: none; }
@@ -351,14 +372,14 @@
    -------------------------------------------------------------------- */
    header .banner { padding-top: 24px; }
    header .banner-text h1 {
-      font: 40px/1.1em 'opensans-bold', sans-serif;      
+      font: 40px/1.1em 'opensans-bold', sans-serif;
       margin: 0 auto 24px auto;
    }
    header .banner-text h3 {
       font: 14px/1.9em 'librebaskerville-regular', sans-serif;
       width: 90%;
    }
-  
+
    /* header social links */
    header .social { font-size: 20px;}
    header .social li { margin: 0 6px; }
@@ -368,15 +389,6 @@
 
    /* social links */
    footer .social-links { font-size: 20px; }
-   footer .social-links li { margin-left: 14px; }   
+   footer .social-links li { margin-left: 14px; }
 
 }
-
-
-
-
-
-
-
-
-
