Site redesign complete

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,32 +1,4 @@
-/*
-=====================================================================
-*   Ceevee v1.0 Layout Stylesheet
-*   url: styleshout.com
-*   03-18-2014
-=====================================================================
-
-   TOC:
-   a. General Styles
-   b. Header Styles
-   c. About Section
-   d. Resume Section
-   e. Portfolio Section
-   f. Call To Action Section
-   g. Testimonials Section
-   h. Contact Section
-   i. Footer
-
-===================================================================== */
-
-/* ------------------------------------------------------------------ */
-/* a. General Styles
-/* ------------------------------------------------------------------ */
-
 body { background: #0f0f0f; }
-
-/* ------------------------------------------------------------------ */
-/* b. Header Styles
-/* ------------------------------------------------------------------ */
 
 header {
    position: relative;
@@ -40,7 +12,6 @@ header {
    overflow: hidden;
 }
 
-/* vertically center banner section */
 header:before {
    content: '';
    display: inline-block;
@@ -66,14 +37,14 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   color: #e6e6e6;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: #fff;
+   color: #b8edff;
 }
 header .banner-text hr {
    width: 60%;
@@ -82,7 +53,6 @@ header .banner-text hr {
    border-color: rgba(150, 150, 150, .1);
 }
 
-/* header social links */
 header .social {
    margin: 24px 0;
    padding: 0;
@@ -97,7 +67,6 @@ header .social li {
 header .social li a { color: #fff; }
 header .social li a:hover { color: #ed3837; }
 
-/* scrolldown link */
 header .scrolldown a {
    position: absolute;
    bottom: 30px;
@@ -119,8 +88,6 @@ header .scrolldown a {
 }
 header .scrolldown a:hover { color: #ed3837; }
 
-/* primary navigation
---------------------------------------------------------------------- */
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
 	 margin: 0;
 	 padding: 0;
@@ -128,7 +95,6 @@ header .scrolldown a:hover { color: #ed3837; }
 	 outline: none;
 }
 
-/* nav-wrap */
 #nav-wrap {
    font: 12px 'opensans-bold', sans-serif;
    width: 100%;
@@ -142,14 +108,11 @@ header .scrolldown a:hover { color: #ed3837; }
 }
 .opaque { background-color: #333; }
 
-/* hide toggle button */
 #nav-wrap > a.mobile-btn { display: none; }
 
 ul#nav {
    min-height: 48px;
    width: auto;
-
-   /* center align the menu */
    text-align: center;
 }
 ul#nav li {
@@ -159,11 +122,7 @@ ul#nav li {
    display: inline-block;
 }
 
-/* Links */
 ul#nav li a {
-
-/* 8px padding top + 8px padding bottom + 32px line-height = 48px */
-
    display: inline-block;
    padding: 8px 13px;
    line-height: 32px;
@@ -180,11 +139,6 @@ ul#nav li a {
 
 ul#nav li a:active { background-color: transparent !important; }
 ul#nav li a:hover { color: #ed3837; }
-
-
-/* ------------------------------------------------------------------ */
-/* c. About Section
-/* ------------------------------------------------------------------ */
 
 #about {
    background: #2B2B2B;
@@ -206,9 +160,10 @@ ul#nav li a:hover { color: #ed3837; }
    color: #7A7A7A;
 }
 #about .profile-pic {
+   margin-top: 20px;
    position: relative;
-   width: 120px;
-   height: 120px;
+   width: 190px;
+   height: 190px;
    border-radius: 100%;
 }
 #about .contact-details { width: 41.66667%; }
@@ -229,11 +184,6 @@ ul#nav li a:hover { color: #ed3837; }
    margin-right: 15px;
    font-size: 20px;
 }
-
-
-/* ------------------------------------------------------------------ */
-/* d. Resume Section
-/* ------------------------------------------------------------------ */
 
 #resume {
    background: #fff;
@@ -280,10 +230,6 @@ ul#nav li a:hover { color: #ed3837; }
    font: 15px/24px 'opensans-regular', sans-serif;
    margin-top: 6px;
 }
-
-/*----------------------------------------------*/
-/*	Skill Bars
-/*----------------------------------------------*/
 
 .bars {
 	width: 95%;
@@ -406,10 +352,6 @@ ul#nav li a:hover { color: #ed3837; }
   100% { width: 50%;  }
 }
 
-/* ------------------------------------------------------------------ */
-/* e. Portfolio Section
-/* ------------------------------------------------------------------ */
-
 #portfolio {
    background: #ebeeee;
    padding-top: 90px;
@@ -424,7 +366,6 @@ ul#nav li a:hover { color: #ed3837; }
    color: #95A3A3;
 }
 
-/* Portfolio Content */
 #portfolio-wrapper .columns { margin-bottom: 36px; }
 .portfolio-item .item-wrap {
    background: #fff;
@@ -442,23 +383,19 @@ ul#nav li a:hover { color: #ed3837; }
    cursor: pointer;
 }
 
-/* overlay */
 .portfolio-item .item-wrap .overlay {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
-
 	opacity: 0;
 	-moz-opacity: 0;
 	filter:alpha(opacity=0);
-
    -webkit-transition: opacity 0.3s ease-in-out;
 	-moz-transition: opacity 0.3s ease-in-out;
 	-o-transition: opacity 0.3s ease-in-out;
 	transition: opacity 0.3s ease-in-out;
-
    background: url(../images/overlay-bg.png) repeat;
 }
 .portfolio-item .item-wrap .link-icon {
@@ -469,16 +406,13 @@ ul#nav li a:hover { color: #ed3837; }
    font-size: 18px;
    line-height: 30px;
    text-align: center;
-
    opacity: 0;
 	-moz-opacity: 0;
 	filter:alpha(opacity=0);
-
    -webkit-transition: opacity 0.3s ease-in-out;
 	-moz-transition: opacity 0.3s ease-in-out;
 	-o-transition: opacity 0.3s ease-in-out;
 	transition: opacity 0.3s ease-in-out;
-
    position: absolute;
    top: 50%;
    left: 50%;
@@ -499,7 +433,6 @@ ul#nav li a:hover { color: #ed3837; }
    margin-bottom: 0;
 }
 
-/* on hover */
 .portfolio-item:hover .overlay {
 	opacity: 1;
 	-moz-opacity: 1;
@@ -511,13 +444,6 @@ ul#nav li a:hover { color: #ed3837; }
 	filter:alpha(opacity=100);
 }
 
-
-
-
-/* fadein/fadeout effect for modal popup
-/* ------------------------------------------------------------------ */
-
-/* content at start */
 .mfp-fade.mfp-wrap .mfp-content .popup-modal {
    opacity: 0;
    -webkit-transition: all 200ms ease-in-out;
@@ -526,23 +452,30 @@ ul#nav li a:hover { color: #ed3837; }
 	-ms-transition: all 200ms ease-in-out;
    transition: all 200ms ease-in-out;
 }
-/* content fadein */
 .mfp-fade.mfp-wrap.mfp-ready .mfp-content .popup-modal {
    opacity: 1;
 }
-/* content fadeout */
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup-modal {
    opacity: 0;
 }
 
-/* ------------------------------------------------------------------ */
-/* e. Portfolio Section
-/* ------------------------------------------------------------------ */
-
+#works {
+   background: #ebeeee;
+   padding-top: 90px;
+   padding-bottom: 60px;
+}
 #portfolio {
    background: #ebeeee;
    padding-top: 90px;
    padding-bottom: 60px;
+}
+#works h1 {
+   font: 15px/24px 'opensans-semibold', sans-serif;
+   text-transform: uppercase;
+   letter-spacing: 1px;
+   text-align: center;
+   margin-bottom: 48px;
+   color: #95A3A3;
 }
 #portfolio h1 {
    font: 15px/24px 'opensans-semibold', sans-serif;
@@ -553,7 +486,6 @@ ul#nav li a:hover { color: #ed3837; }
    color: #95A3A3;
 }
 
-/* Portfolio Content */
 #portfolio-wrapper .columns { margin-bottom: 36px; }
 .portfolio-item .item-wrap {
    background: #fff;
@@ -571,7 +503,6 @@ ul#nav li a:hover { color: #ed3837; }
    cursor: pointer;
 }
 
-/* overlay */
 .portfolio-item .item-wrap .overlay {
    position: absolute;
    left: 0;
@@ -628,7 +559,6 @@ ul#nav li a:hover { color: #ed3837; }
    margin-bottom: 0;
 }
 
-/* on hover */
 .portfolio-item:hover .overlay {
 	opacity: 1;
 	-moz-opacity: 1;
@@ -640,7 +570,6 @@ ul#nav li a:hover { color: #ed3837; }
 	filter:alpha(opacity=100);
 }
 
-/* popup modal */
 .popup-modal {
 	max-width: 550px;
 	background: #fff;
@@ -684,11 +613,6 @@ ul#nav li a:hover { color: #ed3837; }
 .popup-modal a:hover {	color: #ec3837; }
 .popup-modal a.popup-modal-dismiss-portfolio { margin-left: 24px; }
 
-
-/* fadein/fadeout effect for modal popup
-/* ------------------------------------------------------------------ */
-
-/* content at start */
 .mfp-fade.mfp-wrap .mfp-content .popup-modal {
    opacity: 0;
    -webkit-transition: all 200ms ease-in-out;
@@ -697,18 +621,12 @@ ul#nav li a:hover { color: #ed3837; }
 	-ms-transition: all 200ms ease-in-out;
    transition: all 200ms ease-in-out;
 }
-/* content fadein */
 .mfp-fade.mfp-wrap.mfp-ready .mfp-content .popup-modal {
    opacity: 1;
 }
-/* content fadeout */
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup-modal {
    opacity: 0;
 }
-
-/* ------------------------------------------------------------------ */
-/* f. Call To Action Section
-/* ------------------------------------------------------------------ */
 
 #call-to-action {
    background: #212121;
@@ -747,12 +665,7 @@ ul#nav li a:hover { color: #ed3837; }
    color: #636363;
    font-size: 17px;
 }
-/*#
-call-to-action .button {
-	color:#fff;
-   background: #0D0D0D;
-}
-*/
+
 #call-to-action .button:hover,
 #call-to-action .button:active {
    background: #FFFFFF;
@@ -762,10 +675,6 @@ call-to-action .button {
 	font-family: 'opensans-semibold', sans-serif;
 	color: #D8D8D8;
 }
-
-/* ------------------------------------------------------------------
-/* g. Testimonials
-/* ------------------------------------------------------------------ */
 
 #testimonials {
    background: #1F1F1F url(../images/testimonials-bg.jpg) no-repeat center center;
@@ -801,7 +710,6 @@ call-to-action .button {
    color: #fff;
 }
 
-/*	Blockquotes */
 #testimonials blockquote {
    margin: 0 0px 30px 0px;
    padding-left: 0;
@@ -827,10 +735,6 @@ call-to-action .button {
 #testimonials blockquote cite a,
 #testimonials blockquote cite a:visited { color: #8B9798; border: none }
 
-/* Flex Slider
-/* ------------------------------------------------------------------ */
-
-/* Reset */
 .flexslider a:active,
 .flexslider a:focus  { outline: none; }
 .slides,
@@ -838,7 +742,6 @@ call-to-action .button {
 .flex-direction-nav { margin: 0; padding: 0; list-style: none; }
 .slides li { margin: 0; padding: 0;}
 
-/* Necessary Styles */
 .flexslider {
    position: relative;
    zoom: 1;
@@ -848,12 +751,9 @@ call-to-action .button {
 .flexslider .slides { zoom: 1; }
 .flexslider .slides > li { position: relative; }
 
-/* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides > li { display: none; -webkit-backface-visibility: hidden; }
-/* Suggested container for slide animation setups. Can replace this with your own */
 .flex-container { zoom: 1; position: relative; }
 
-/* Clearfix for .slides */
 .slides:before,
 .slides:after {
    content: " ";
@@ -863,19 +763,13 @@ call-to-action .button {
    clear: both;
 }
 
-/* No JavaScript Fallback */
-/* If you are not using another script, such as Modernizr, make sure you
- * include js that eliminates this class on page load */
 .no-js .slides > li:first-child { display: block; }
 
-/* Slider Styles */
 .slides { zoom: 1; }
 .slides > li {
-   /*margin-right: 5px; */
    overflow: hidden;
 }
 
-/* Control Nav */
 .flex-control-nav {
     width: 100%;
     position: absolute;
@@ -912,10 +806,6 @@ call-to-action .button {
     cursor: default;
 }
 
-/* ------------------------------------------------------------------ */
-/* h. Contact Section
-/* ------------------------------------------------------------------ */
-
 #contact {
    background: #191919;
    padding-top: 96px;
@@ -948,8 +838,6 @@ call-to-action .button {
 }
 #contact .header-col { padding-top: 6px; }
 
-
-/* contact form */
 #contact form { margin-bottom: 30px; }
 #contact label {
    font: 15px/24px 'opensans-bold', sans-serif;
@@ -1020,8 +908,6 @@ call-to-action .button {
    top: 17px;
 }
 
-
-/* Twitter Feed */
 #twitter {
    margin-top: 12px;
    padding: 0;
@@ -1039,11 +925,6 @@ call-to-action .button {
    border: none;
 }
 
-
-/* ------------------------------------------------------------------ */
-/* i. Footer
-/* ------------------------------------------------------------------ */
-
 footer {
    padding-top: 48px;
    margin-bottom: 48px;
@@ -1053,10 +934,9 @@ footer {
    position: relative;
 }
 
-footer a, footer a:visited { color: #525252; }
-footer a:hover, footer a:focus { color: #fff; }
+footer a, footer a:visited { color: #bebebe; }
+footer a:hover, footer a:focus { color: #ed3837; }
 
-/* copyright */
 footer .copyright {
     margin: 0;
     padding: 0;
@@ -1074,13 +954,12 @@ footer .copyright li:before {
     content: "\2022";
     padding-left: 10px;
     padding-right: 10px;
-    color: #095153;
+    color: #ed3837;
 }
 footer .copyright  li:first-child:before {
     display: none;
 }
 
-/* social links */
 footer .social-links {
    margin: 18px 0 30px 0;
    padding: 0;
@@ -1096,7 +975,6 @@ footer .social-links li {
 
 footer .social-links li:first-child { margin-left: 0; }
 
-/* Go To Top Button */
 #go-top {
 	position: absolute;
 	top: -24px;
@@ -1115,15 +993,12 @@ footer .social-links li:first-child { margin-left: 0; }
    -o-transition: all 0.2s ease-in-out;
    -ms-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
-
    color: #fff;
    font-size: 21px;
    line-height: 60px;
  	border-radius: 100%;
 }
 #go-top a:hover { background-color: #ed3837; }
-
-/* misc */
 
 [class*=" devicon-"], [class^=devicon-] {
   font-size: 43px;
