--- a/css/layout.css
+++ b/css/layout.css
@@ -628,6 +628,12 @@ ul#nav li a:hover { color: #ed3837; }
    opacity: 0;
 }
 
+.hideMe {visibility: hidden !important;}
+
+@media screen and (max-width:900px) {
+  .hideMe {display: none !important;}
+}
+
 #call-to-action {
    background: #212121;
    padding-top: 66px;
